@@ -191,6 +191,7 @@ return array(
     'ezcDocumentEzXmlToDocbookTableCellHandler'          => 'Document/converters/element_visitor/ezxml/docbook/table_cell.php',
     'ezcDocumentEzXmlToDocbookTableHandler'              => 'Document/converters/element_visitor/ezxml/docbook/table.php',
     'ezcDocumentEzXmlToDocbookTableRowHandler'           => 'Document/converters/element_visitor/ezxml/docbook/table_row.php',
+    'ezcDocumentNoListItemGenerator'                     => 'Document/document/pdf/item_generator/no.php',
     'ezcDocumentNumberedListItemGenerator'               => 'Document/document/pdf/item_generator/number.php',
     'ezcDocumentParserOptions'                           => 'Document/options/document_parser.php',
     'ezcDocumentPdf'                                     => 'Document/document/pdf.php',
@@ -204,6 +205,8 @@ return array(
     'ezcDocumentPdfHeaderPdfPart'                        => 'Document/document/pdf/part/header.php',
     'ezcDocumentPdfImage'                                => 'Document/document/pdf/image.php',
     'ezcDocumentPdfInferencableDomElement'               => 'Document/document/pdf/dom_element.php',
+    'ezcDocumentPdfListItemRenderer'                     => 'Document/document/pdf/renderer/list_item.php',
+    'ezcDocumentPdfListRenderer'                         => 'Document/document/pdf/renderer/list.php',
     'ezcDocumentPdfLiteralBlockRenderer'                 => 'Document/document/pdf/renderer/literal_block.php',
     'ezcDocumentPdfLiteralTokenizer'                     => 'Document/document/pdf/tokenizer/literal.php',
     'ezcDocumentPdfMainRenderer'                         => 'Document/document/pdf/renderer/main.php',
