@@ -1,0 +1,22 @@
+<?xml version="1.0"?>
+<article xmlns="http://docbook.org/ns/docbook">
+  <section>
+    <sectioninfo/>
+    <orderedlist>
+      <listitem>
+        <para>TrueType fonts.</para>
+        <itemizedlist>
+          <listitem>
+            <para>TrueType fonts.</para>
+          </listitem>
+          <listitem>
+            <para>PostScript fonts.</para>
+          </listitem>
+        </itemizedlist>
+      </listitem>
+      <listitem>
+        <para>PostScript fonts.</para>
+      </listitem>
+    </orderedlist>
+  </section>
+</article>
