@@ -1,0 +1,175 @@
+<?php
+/**
+ * ezcDocumentPdfDriverTcpdfTests
+ * 
+ * @package Document
+ * @version //autogen//
+ * @subpackage Tests
+ * @copyright Copyright (C) 2005-2009 eZ Systems AS. All rights reserved.
+ * @license http://ez.no/licenses/new_bsd New BSD License
+ */
+
+require_once 'renderer_text_box_base_tests.php';
+
+/**
+ * Test suite for class.
+ * 
+ * @package Document
+ * @subpackage Tests
+ */
+class ezcDocumentPdfListRendererTests extends ezcDocumentPdfTestCase
+{
+    public static function suite()
+    {
+        return new PHPUnit_Framework_TestSuite( __CLASS__ );
+    }
+
+    public function setUp()
+    {
+        parent::setUp();
+
+        $this->styles = new ezcDocumentPdfStyleInferencer();
+        $this->styles->appendStyleDirectives( array(
+            new ezcDocumentPdfCssDirective(
+                array( 'article' ),
+                array(
+                    'font-size' => '8mm',
+                )
+            ),
+            new ezcDocumentPdfCssDirective(
+                array( 'page' ),
+                array(
+                    'page-size' => 'TEST',
+                    'margin'    => '0',
+                    'padding'   => '10',
+                )
+            ),
+        ) );
+    }
+
+    public function testRenderItemizedList()
+    {
+        $mock = $this->getMock( 'ezcTestDocumentPdfMockDriver', array(
+            'createPage',
+            'drawWord',
+        ) );
+
+        // Expectations
+        $mock->expects( $this->at( 0 ) )->method( 'createPage' )->with(
+            $this->equalTo( 100, 1. ), $this->equalTo( 100, 1. )
+        );
+        $mock->expects( $this->at( 1 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 10, 1. ), $this->equalTo( 18, 1. ), $this->equalTo( "-" )
+        );
+        $mock->expects( $this->at( 2 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 20, 1. ), $this->equalTo( 18, 1. ), $this->equalTo( "TrueType" )
+        );
+        $mock->expects( $this->at( 3 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 56, 1. ), $this->equalTo( 18, 1. ), $this->equalTo( "fonts." )
+        );
+        $mock->expects( $this->at( 4 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 10, 1. ), $this->equalTo( 33, 1. ), $this->equalTo( "-" )
+        );
+        $mock->expects( $this->at( 5 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 20, 1. ), $this->equalTo( 33, 1. ), $this->equalTo( "PostScript" )
+        );
+        $mock->expects( $this->at( 6 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 64, 1. ), $this->equalTo( 33, 1. ), $this->equalTo( "fonts." )
+        );
+
+        $docbook = new ezcDocumentDocbook();
+        $docbook->loadFile( dirname( __FILE__ ) . '/../files/pdf/bullet_list.xml' );
+
+        $renderer  = new ezcDocumentPdfMainRenderer( $mock, $this->styles );
+        $pdf = $renderer->render(
+            $docbook,
+            new ezcDocumentPdfDefaultHyphenator()
+        );
+    }
+
+    public function testRenderOrderedList()
+    {
+        $mock = $this->getMock( 'ezcTestDocumentPdfMockDriver', array(
+            'createPage',
+            'drawWord',
+        ) );
+
+        // Expectations
+        $mock->expects( $this->at( 0 ) )->method( 'createPage' )->with(
+            $this->equalTo( 100, 1. ), $this->equalTo( 100, 1. )
+        );
+        $mock->expects( $this->at( 1 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 10, 1. ), $this->equalTo( 18, 1. ), $this->equalTo( "i" )
+        );
+        $mock->expects( $this->at( 2 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 20, 1. ), $this->equalTo( 18, 1. ), $this->equalTo( "TrueType" )
+        );
+        $mock->expects( $this->at( 3 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 56, 1. ), $this->equalTo( 18, 1. ), $this->equalTo( "fonts." )
+        );
+        $mock->expects( $this->at( 4 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 10, 1. ), $this->equalTo( 33, 1. ), $this->equalTo( "ii" )
+        );
+        $mock->expects( $this->at( 5 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 20, 1. ), $this->equalTo( 33, 1. ), $this->equalTo( "PostScript" )
+        );
+        $mock->expects( $this->at( 6 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 64, 1. ), $this->equalTo( 33, 1. ), $this->equalTo( "fonts." )
+        );
+
+        $docbook = new ezcDocumentDocbook();
+        $docbook->loadFile( dirname( __FILE__ ) . '/../files/pdf/ordered_list.xml' );
+
+        $renderer  = new ezcDocumentPdfMainRenderer( $mock, $this->styles );
+        $pdf = $renderer->render(
+            $docbook,
+            new ezcDocumentPdfDefaultHyphenator()
+        );
+    }
+
+    public function testRenderStackedLists()
+    {
+        $this->markTestSkipped( "Causes endless recursion." );
+
+        $mock = $this->getMock( 'ezcTestDocumentPdfMockDriver', array(
+            'acreatePage',
+            'adrawWord',
+        ) );
+
+        // Expectations
+        $mock->expects( $this->at( 0 ) )->method( 'createPage' )->with(
+            $this->equalTo( 100, 1. ), $this->equalTo( 100, 1. )
+        );
+        $mock->expects( $this->at( 1 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 10, 1. ), $this->equalTo( 18, 1. ), $this->equalTo( "i" )
+        );
+        $mock->expects( $this->at( 2 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 20, 1. ), $this->equalTo( 18, 1. ), $this->equalTo( "TrueType" )
+        );
+        $mock->expects( $this->at( 3 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 56, 1. ), $this->equalTo( 18, 1. ), $this->equalTo( "fonts." )
+        );
+        $mock->expects( $this->at( 4 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 10, 1. ), $this->equalTo( 33, 1. ), $this->equalTo( "ii" )
+        );
+        $mock->expects( $this->at( 5 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 20, 1. ), $this->equalTo( 33, 1. ), $this->equalTo( "PostScript" )
+        );
+        $mock->expects( $this->at( 6 ) )->method( 'drawWord' )->with(
+            $this->equalTo( 64, 1. ), $this->equalTo( 33, 1. ), $this->equalTo( "fonts." )
+        );
+
+        $docbook = new ezcDocumentDocbook();
+        $docbook->loadFile( dirname( __FILE__ ) . '/../files/pdf/stacked_list.xml' );
+
+        $renderer  = new ezcDocumentPdfMainRenderer( $mock, $this->styles );
+        $pdf = $renderer->render(
+            $docbook,
+            new ezcDocumentPdfDefaultHyphenator()
+        );
+
+        $mock->debugDump();
+    }
+}
+
+?>
